install(FILES
    airspy.conf
    hackrf-pi4.conf
    limesdr-odroid-n2+.conf
    usrp-b2x0.conf
    bladerf-10msps.conf
    hackrf-10msps.conf
    hackrf-soapy.conf
    rtl-sdr.conf
    usrp.conf
    hackrf.conf
    limesdr-10msps.conf
    rtl-sdr-soapy.conf

    DESTINATION share/iridium/examples
)
